part2/ponger/manifests/pgservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
  namespace: exercises-namespace
  labels:
    app: postgres
spec:
  ports:
  - port: 5432
    name: web
  clusterIP: None
  selector:
    app: postgres
