part2/ponger/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ponger-ingress

spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: ponger-svc
          servicePort: 2346
